Integrated queue to HAL with semaphores.

--- a/Proj3Demo/Proj3Demo.ioc
+++ b/Proj3Demo/Proj3Demo.ioc
@@ -7,8 +7,8 @@ FREERTOS.INCLUDE_xTaskAbortDelay=1
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_xTaskGetCurrentTaskHandle,configTOTAL_HEAP_SIZE,Mutexes01,FootprintOK,BinarySemaphores01
-FREERTOS.Mutexes01=myMutex01,Static,myMutex01ControlBlock
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Mutexes01=queue_mutex,Static,myMutex01ControlBlock
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;TellerThread1,8,256,StartTask02,Default,NULL,Dynamic,NULL,NULL;TellerThread2,8,256,StartTask03,Default,NULL,Dynamic,NULL,NULL;TellerThread3,8,256,StartTask04,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=9000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -770,7 +770,7 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=1000
+TIM2.Period=10
 TIM2.Prescaler=13332
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
