Further progress on fixing tellers

--- a/Proj3Demo/Proj3Demo.ioc
+++ b/Proj3Demo/Proj3Demo.ioc
@@ -1,15 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.BinarySemaphores01=myBinarySem01,Dynamic,NULL
+FREERTOS.BinarySemaphores01=myBinarySem01,Dynamic,NULL;printBinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
+FREERTOS.HEAP_NUMBER=4
 FREERTOS.INCLUDE_pcTaskGetTaskName=1
 FREERTOS.INCLUDE_xSemaphoreGetMutexHolder=0
 FREERTOS.INCLUDE_xTaskAbortDelay=1
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_xTaskGetCurrentTaskHandle,configTOTAL_HEAP_SIZE,Mutexes01,FootprintOK,BinarySemaphores01
-FREERTOS.Mutexes01=queue_mutex,Static,myMutex01ControlBlock
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;TellerThread1,24,256,StartTask02,Default,NULL,Dynamic,NULL,NULL;TellerThread2,24,256,StartTask03,Default,NULL,Dynamic,NULL,NULL;TellerThread3,24,256,StartTask04,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=9000
+FREERTOS.IPParameters=Tasks01,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_xTaskGetCurrentTaskHandle,configTOTAL_HEAP_SIZE,FootprintOK,BinarySemaphores01,HEAP_NUMBER,configMINIMAL_STACK_SIZE
+FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;TellerThread1,24,512,StartTask02,Default,NULL,Dynamic,NULL,NULL;TellerThread2,24,512,StartTask03,Default,NULL,Dynamic,NULL,NULL;TellerThread3,24,512,StartTask04,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=128
+FREERTOS.configTOTAL_HEAP_SIZE=15000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -772,7 +773,8 @@ TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=10
 TIM2.Prescaler=13332
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
